# TinyTen

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Format.cmake
include/: ShapeIterator.hpp  TinyTensor.hpp  concepts.hpp  operators.hpp  tensor.hpp  tensor_indexer.hpp  tensor_indexing.hpp  tensor_iterators.hpp  tensor_metadata.hpp  tensor_scatter_gather.hpp  tensor_trig.hpp  types.hpp  utils.hpp
include/utils/: ShapeIterator.hpp  StridedIterator.hpp  TensorIterator.hpp  utils.hpp
test/: CMakeLists.txt  main.cpp  test_utils.hpp
